updated text to free range

--- a/index.html
+++ b/index.html
@@ -59,8 +59,7 @@
       <h1 class="">More than you need</h1>
       <h1 class="fs-1"><strong>Welcome To Exact</strong></h1>
       <p class=" design text-center col-lg-4 mx-lg-auto">We design, manage and develop custom web applications that suit
-        you. Crafting
-        visually stunning memorable experiences for web and interfaces</p>
+        you. Crafting stunning memorable experiences for web and interfaces</p>
     </div>
     <div class="container">
       <div class="inside-second d-lg-flex justify-content-lg-center pt-lg-4">
